In CWS avoid the "submit a solution" form to overflow
Since it had a fixed height the inputs were overflowing when there were
too many of them, which is often the case in output-only tasks.

--- a/cms/server/static/style_new.css
+++ b/cms/server/static/style_new.css
@@ -413,6 +413,40 @@ td.token_rules p:last-child {
     clear: both;
 }
 
+/*** Submit a solution */
+
+#submit_solution {
+    margin-bottom: 20px;
+}
+
+#submit_solution form {
+    margin-bottom: 0;
+}
+
+#submit_solution .control-group {
+    margin-bottom: 0;
+}
+
+#submit_solution .control-group:last-of-type {
+    margin-top: 10px;
+}
+
+#submit_solution .control-label {
+    width: 100px;
+    padding-top: 4px;
+    margin-bottom: 4px;
+}
+
+#submit_solution .controls {
+    margin-left: 110px;
+}
+
+#submit_solution input[type="file"] {
+    height: auto;
+    line-height: 18px;
+}
+
+
 /*** Submissions table */
 
 #submission_list colgroup col.time,
